--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h2, h3 {
     width: 100%;
 }
 
-#Logo {
+#logo {
     width: 250px;
     height: 90px;
     background: #4aaaa5;
@@ -197,13 +197,38 @@ input[type=submit] {
 }
 
 @media only screen and (max-width: 980px) {
-    
+    .main-section {
+    max-width: 640px;
+    }
+
 }
 
 @media only screen and (max-width: 768px) {
-    
+    .main-section {
+    margin:auto;
+    }
+    .auth-image {
+    width:300px;
+    height:330px;
+    }
 }
 
 @media only screen and (max-width: 640px) {
-    
+    #masthead {
+    position: static;
+    width:100%;
+    }
+    .auth-image {
+    float:none;
+    width:100%;
+    height:100%;
+    }
+    nav {
+    float:none;
+    }
+    #logo {
+    float:none;
+    min-width:640px;
+    text-align:center;
+    }
 }
