--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ nav a:first-child {
 
 .auth-image {
     width: 200px;
-    height: 220px;
+    height: auto;
     margin-top: 10px;
     float: left;
     margin-right: 25px;
@@ -209,7 +209,7 @@ input[type=submit] {
     }
     .auth-image {
     width:300px;
-    height:330px;
+    height:auto;
     }
 }
 
